# controle_despesas

./: .dockerignore  Dockerfile  pyproject.toml
controle_despesas/: database.py  settings.py
